--- a/html/hot_drugs.html
+++ b/html/hot_drugs.html
@@ -752,5 +752,6 @@
       </div>
     </footer>
     <script src="../js/carousel_drugs.js"></script>
+    <script src="../js/favorite_btn.js"></script>
   </body>
 </html>
