--- a/html/hot_drugs.html
+++ b/html/hot_drugs.html
@@ -21,8 +21,8 @@
         <img src="../img/wikimedic.png" alt="Logo da Wikimedic" />
       </div>
       <nav class="main-nav">
-        <a class="selected" href="../index.html">Home</a>
-        <a href="./hot_drugs.html">Em alta</a>
+        <a href="../index.html">Home</a>
+        <a class="selected" href="./hot_drugs.html">Em alta</a>
         <a href="./sobre.html">Sobre nós</a>
       </nav>
       <div class="search">
@@ -41,10 +41,10 @@
           </div>
           <ul>
             <li class="responsive-extra">
-              <a class="selected" href="../index.html">Home</a>
+              <a href="../index.html">Home</a>
             </li>
             <li class="responsive-extra">
-              <a href="./hot_drugs.html">Em alta</a>
+              <a class="selected" href="./hot_drugs.html">Em alta</a>
             </li>
             <li class="responsive-extra">
               <a href="./sobre.html">Sobre nós</a>
