--- a/html/hot_drugs.html
+++ b/html/hot_drugs.html
@@ -31,7 +31,7 @@
         <ul id="result"></ul>
       </div>
       <div class="login">
-        <a href="./login.html">Login</a>
+        <a id="login-a" href="./login.html">Login</a>
         <nav class="menu">
           <input type="checkbox" class="menu-faketrigger" />
           <div class="menu-lines">
@@ -761,7 +761,7 @@
         </article>
       </div>
       <script type="module">
-        import { serverURL } from "../js/env.js";
+        import { serverURL, userInfo } from "../js/env.js";
         async function home() {
           const response = await fetch(
             "https://bula.vercel.app/pesquisar?nome=AMOXICILINA&pagina=1"
@@ -774,9 +774,6 @@
             console.log("API Bulario Funcionando");
           }
 
-          document.cookie = "meuCookie=valor; path=/";
-          console.log(document.cookie);
-
           const serverResponse = await fetch(serverURL);
           if (!serverResponse.ok) {
             alert(
@@ -786,6 +783,23 @@
             console.log("Servidor Wikimedic Funcionando!");
           }
         }
+        if (userInfo.id != null && userInfo.id != "") {
+        console.log('Usuário logado')
+        var meuLink = document.getElementById('login-a');
+
+
+        var novoElementoI = document.createElement('i');
+        novoElementoI.classList.add('fa-solid')
+        novoElementoI.classList.add('fa-user')
+
+        for (var i = 0; i < meuLink.attributes.length; i++) {
+          novoElementoI.setAttribute(meuLink.attributes[i].name, meuLink.attributes[i].value);
+        }
+
+        // Substitui o elemento <a> pelo elemento <i>
+        meuLink.parentNode.replaceChild(novoElementoI, meuLink);
+      }
+
         home();
       </script>
       <script src="../js/search.js"></script>
